@@ -136,6 +136,8 @@ x2goclient (4.0.5.3-0x2go1) UNRELEASED; urgency=medium
     - deduplicate.sh: add missed local variable declaration.
     - deduplicate.sh: new function for parsing otool's output and printing
       library dependencies if no error occurred.
+    - deduplicate.sh: non-functional: change WARNING to ERROR in error
+      messages.
 
   [ Bernard Cafarelli ]
   * New upstream version (4.0.5.3):
